test/conformance/chainsaw/validating-policies/report/background/globalcontextentry/globalcontextentry.yaml
apiVersion: kyverno.io/v2alpha1
kind: GlobalContextEntry
metadata:
  name: all-deployments
spec:
  kubernetesResource:
    group: "apps"
    version: v1
    resource: deployments 
    namespace: test-globalcontext-validatingpolicy-audit-report-ns
