test/conformance/chainsaw/validating-policies/report/background/globalcontextentry/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: test-globalcontext-validatingpolicy-audit-report
spec:
  validationActions:
    - Audit
  failurePolicy: Ignore
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  variables:
    - name: deployments
      expression: >-
        globalContext.get("all-deployments", "")
  validations:
    - expression: "0 == 1"
      messageExpression: '"debug=" + string(variables.deployments.size())'
